[package]
name = "pg_chainsync"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_chainsync"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.12.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde_json = { version = "1.0" }
heapless = "0.8"
serde = { version = "1", features = ["rc"] }
tokio-cron = "0.1"
cron = "0.14"
anyhow = "1"
bus = "2.4"
alloy = { version = "0.8", features = ["full"] }
alloy-chains = { version = "0.1", features = ["serde"] }
solana-sdk = "2.1.7"
solana-client = "2.1.7"
solana-transaction-status-client-types = "2.1.7"

[dev-dependencies]
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
