[package]
name = "pg_chainsync"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_chainsync"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.15.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde_json = { version = "1.0" }
heapless = "0.8"
serde = { version = "1", features = ["rc"] }
cron = "0.15"
anyhow = "1"
bus = "2.4"
alloy = { version = "1", features = ["full"] }
alloy-chains = { version = "0.2", features = ["serde"] }
solana-sdk = "2"
solana-client = "2"
solana-transaction-status-client-types = "2"
solana-account-decoder-client-types = "2"
chrono = "0.4"
bs58 = "0.5"
derive_more = "2.0.1"
indexmap = "2.9.0"

[dev-dependencies]
pgrx-tests = "0.15.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
